WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
228985
Non-unified build fixes, mid August 2021 edition
https://bugs.webkit.org/show_bug.cgi?id=228985
Summary
Non-unified build fixes, mid August 2021 edition
Adrian Perez
Reported
2021-08-11 00:50:52 PDT
(a.k.a. “Kindergarten Starts” edition)
Attachments
Patch
(3.45 KB, patch)
2021-08-11 00:53 PDT
,
Adrian Perez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adrian Perez
Comment 1
2021-08-11 00:53:59 PDT
Created
attachment 435328
[details]
Patch
EWS
Comment 2
2021-08-11 02:47:34 PDT
Committed
r280890
(
240427@main
): <
https://commits.webkit.org/240427@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 435328
[details]
.
Radar WebKit Bug Importer
Comment 3
2021-08-11 02:48:16 PDT
<
rdar://problem/81784932
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug