Source/WebCore/loader/CrossOriginOpenerPolicy.cpp
@@ -29,6 +29,7 @@
 #include "CrossOriginEmbedderPolicy.h"
 #include "HTTPHeaderNames.h"
 #include "HTTPParsers.h"
+#include "ResourceResponse.h"
 #include "ScriptExecutionContext.h"
 
 namespace WebCore {
